# edu-diff-generator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff-check.yml
gendiff/: __init__.py  diff_maker.py  gendiff.py  parser.py
gendiff/formats/: json.py  plain.py  string.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_gendiff_plain.py
tests/fixtures/flat_json/pack1/: expect.txt  file1.json  file2.json
tests/fixtures/flat_yaml/pack1/: expect.txt  file1.yaml  file2.yml
tests/fixtures/json_format/: expect.json
tests/fixtures/plain_format/pack2/: expect.txt  file1.json  file2.yaml
